# todo

./: Cargo.toml  README.md
.github/workflows/: release.yml
migrations/: V1__todo_table.sql
src/: main.rs  store.rs  todo.rs
