[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
chrono-humanize = "0.2.2"
clap = { version = "4.2.1", features = ["derive"] }
home = "0.5.4"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
