[package]
name = "todo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
chrono-humanize = "0.2.2"
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.0"
home = "0.5.4"
refinery = { version = "0.8.7", features = ["rusqlite-bundled"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
